; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/fm10k/extr_fm10k_pci.c_fm10k_mbx_request_irq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/fm10k/extr_fm10k_pci.c_fm10k_mbx_request_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fm10k_intfc = type { %struct.fm10k_hw }
%struct.fm10k_hw = type { %struct.TYPE_6__, %struct.TYPE_4__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 (%struct.fm10k_hw.0*, %struct.TYPE_6__*)* }
%struct.fm10k_hw.0 = type opaque
%struct.TYPE_4__ = type { i64 }

@fm10k_mac_pf = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fm10k_mbx_request_irq(%struct.fm10k_intfc* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.fm10k_intfc*, align 8
  %4 = alloca %struct.fm10k_hw*, align 8
  %5 = alloca i32, align 4
  store %struct.fm10k_intfc* %0, %struct.fm10k_intfc** %3, align 8
  %6 = load %struct.fm10k_intfc*, %struct.fm10k_intfc** %3, align 8
  %7 = getelementptr inbounds %struct.fm10k_intfc, %struct.fm10k_intfc* %6, i32 0, i32 0
  store %struct.fm10k_hw* %7, %struct.fm10k_hw** %4, align 8
  %8 = load %struct.fm10k_hw*, %struct.fm10k_hw** %4, align 8
  %9 = getelementptr inbounds %struct.fm10k_hw, %struct.fm10k_hw* %8, i32 0, i32 1
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @fm10k_mac_pf, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %17

14:                                               ; preds = %1
  %15 = load %struct.fm10k_intfc*, %struct.fm10k_intfc** %3, align 8
  %16 = call i32 @fm10k_mbx_request_irq_pf(%struct.fm10k_intfc* %15)
  store i32 %16, i32* %5, align 4
  br label %20

17:                                               ; preds = %1
  %18 = load %struct.fm10k_intfc*, %struct.fm10k_intfc** %3, align 8
  %19 = call i32 @fm10k_mbx_request_irq_vf(%struct.fm10k_intfc* %18)
  store i32 %19, i32* %5, align 4
  br label %20

20:                                               ; preds = %17, %14
  %21 = load i32, i32* %5, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %20
  %24 = load i32, i32* %5, align 4
  store i32 %24, i32* %2, align 4
  br label %43

25:                                               ; preds = %20
  %26 = load %struct.fm10k_hw*, %struct.fm10k_hw** %4, align 8
  %27 = getelementptr inbounds %struct.fm10k_hw, %struct.fm10k_hw* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 0
  %30 = load i32 (%struct.fm10k_hw.0*, %struct.TYPE_6__*)*, i32 (%struct.fm10k_hw.0*, %struct.TYPE_6__*)** %29, align 8
  %31 = load %struct.fm10k_hw*, %struct.fm10k_hw** %4, align 8
  %32 = bitcast %struct.fm10k_hw* %31 to %struct.fm10k_hw.0*
  %33 = load %struct.fm10k_hw*, %struct.fm10k_hw** %4, align 8
  %34 = getelementptr inbounds %struct.fm10k_hw, %struct.fm10k_hw* %33, i32 0, i32 0
  %35 = call i32 %30(%struct.fm10k_hw.0* %32, %struct.TYPE_6__* %34)
  store i32 %35, i32* %5, align 4
  %36 = load i32, i32* %5, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %41

38:                                               ; preds = %25
  %39 = load %struct.fm10k_intfc*, %struct.fm10k_intfc** %3, align 8
  %40 = call i32 @fm10k_mbx_free_irq(%struct.fm10k_intfc* %39)
  br label %41

41:                                               ; preds = %38, %25
  %42 = load i32, i32* %5, align 4
  store i32 %42, i32* %2, align 4
  br label %43

43:                                               ; preds = %41, %23
  %44 = load i32, i32* %2, align 4
  ret i32 %44
}

declare dso_local i32 @fm10k_mbx_request_irq_pf(%struct.fm10k_intfc*) #1

declare dso_local i32 @fm10k_mbx_request_irq_vf(%struct.fm10k_intfc*) #1

declare dso_local i32 @fm10k_mbx_free_irq(%struct.fm10k_intfc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
